--- a/Application/app/src/main/res/values/strings.xml
+++ b/Application/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="imcrit">Improve\n crit</string>
     <string name="sounds">Sounds</string>
     <string name="skin">Skin</string>
+    <string name="connect">Connect</string>
 
     <string name="_1">1</string>
     <string name="_2">2</string>
@@ -21,5 +22,11 @@
     <string name="_8">8</string>
     <string name="_9">9</string>
 
-
+    <string name="scanning">scanning for devices...</string>
+    <string name="select_device">select a device to connect</string>
+    <string name="none_paired">No devices have been paired</string>
+    <string name="none_found">No devices found</string>
+    <string name="title_paired_devices">Paired Devices</string>
+    <string name="title_other_devices">Other Available Devices</string>
+    <string name="button_scan">Scan for devices</string>
 </resources>
